--- a/app/AdminModule/Presenters/templates/UserAdmCreate.default.latte
+++ b/app/AdminModule/Presenters/templates/UserAdmCreate.default.latte
@@ -1,5 +1,11 @@
 {block content}
-	<a n:href=":Admin:UsersAdmin: ">Zpět</a>
+<div id="user-admin-create">
+	<div id="user-admin-create-back">
+		<a n:href=":Admin:UsersAdmin: ">Zpět</a>
+	</div>
 	<h1>Vytváření uživatele</h1>
-	{control admCreateProfileForm }
+	<div id="user-admin-create-formular">
+		{control admCreateProfileForm }
+	</div>
+</div>
 {/block}
