--- a/app/AdminModule/Presenters/templates/UsersAdmin.default.latte
+++ b/app/AdminModule/Presenters/templates/UsersAdmin.default.latte
@@ -1,8 +1,11 @@
 {block content}
+<div id="user-admin">
 	<h1>Správa uživatelů</h1>
-	<a href="{link UserAdmCreate: }">Vytvořit nového uživatele</a>
+	<div id="user-admin-back">
+		<a href="{link UserAdmCreate: }">Vytvořit nového uživatele</a>
+	</div>
 	{if $users}
-		<table>
+		<table id="user-admin-table">
 		<tr>
 			<th>ID</th>
 			<th>Role</th>
@@ -23,5 +26,5 @@
 		{/foreach}
 		</table>
 	{/if}
-
+</div>
 {/block}
