--- a/app/BookModule/Presenters/templates/BookAdd.default.latte
+++ b/app/BookModule/Presenters/templates/BookAdd.default.latte
@@ -1,5 +1,9 @@
 {block content}
+<div id="book-add">
     <h1>Přidat knižní titul</h1>
     <p>Upozornění název knihy po vytvoření nelze měnit</p>
-	{control bookAddForm}
+    <div id="book-add-formular">
+	    {control bookAddForm}
+    </div>
+</div>
 {/block content}
