--- a/app/BookModule/Presenters/templates/Kniha.show.latte
+++ b/app/BookModule/Presenters/templates/Kniha.show.latte
@@ -1,42 +1,44 @@
 {block content}
+<div id="book-show">
+    {if $user->isAllowed('Knihy')}<a href="{link BookEdit: $kniha->ID}">Editovat</a>{/if}
+    <h1>{$kniha->ID}</h1>
 
-{if $user->isAllowed('Knihy')}<a href="{link BookEdit: $kniha->ID}">Editovat</a>{/if}
-<h1>{$kniha->ID}</h1>
+    <div class="popis">{$kniha->popis}</div>
+    <div class="medzera"></div>
+    {if $autori}
+        <h2>Autoři:</h2>
+        <ul>
+        {foreach $autori as $autor}
+            <div class="autor">
+                <li>{$autor->meno} {$autor->priezvisko}</li>
+            </div>
+        {/foreach}
+        </ul>
+    {/if}
+    <div class="medzera"></div>
+    <h2>Podrobnosti:</h2>
+    <p>Vydavatelství: {$kniha->vydavatelstvo}</p>
+    <p>Datum vydání: {$kniha->datumVydani|date:'Y.m.d'}</p>
+    <p>Žánry: {$kniha->zanry}</p>
+    <p>Tagy: {$kniha->tagy}</p>
 
-<div class="popis">{$kniha->popis}</div>
-
-{if $autori}
-    <h2>Autoři:</h2>
-    <ul>
-    {foreach $autori as $autor}
-        <div class="autor">
-            <li>{$autor->meno} {$autor->priezvisko}</li>
-        </div>
-    {/foreach}
-    </ul>
-{/if}
-<h2>Podrobnosti:</h2>
-<p>Vydavatelství: {$kniha->vydavatelstvo}</p>
-<p>Datum vydání: {$kniha->datumVydani|date:'Y.m.d'}</p>
-<p>Žánry: {$kniha->zanry}</p>
-<p>Tagy: {$kniha->tagy}</p>
-
-<p>{$voteCount} uživatel/ů hlasovalo pro tuto knihu</p>
-{if $user->isLoggedIn()}<a href="{link Vote! $kniha->ID}">Hlasovat pro tuto knihu</a>{/if}
-
-<h2>Lze zapůjčit v:</h2>
-<table>
-    <tr>
-        <th>Knihovna</th>
-        <th>Dostupné množství</th>
-        <th>Zarezervovat</th>
-    </tr>
-    {foreach $borrows as $borrow}
+    <p>{$voteCount} uživatel/ů hlasovalo pro tuto knihu</p>
+    {if $user->isLoggedIn()}<a href="{link Vote! $kniha->ID}">Hlasovat pro tuto knihu</a>{/if}
+    <div class="medzera"></div>
+    <h2>Lze zapůjčit v:</h2>
+    <table id="tabulka-books">
         <tr>
-            <td><a href="{link :Library:ViewLibrary: $borrow->ID_knihovna}">{$borrow->ID_knihovna}</a></td>
-            <td>{$borrow->mnozstvi-$borrow->vydano}</td>
-            <td>{if $userID}<a href="{link zapujcit! $kniha->ID, $borrow->ID_knihovna,$userID}">Zarezervovat</a>{else}<a href="{link redirectToLogin!}">Zarezervovat</a>{/if}</td>
+            <th>Knihovna</th>
+            <th>Dostupné množství</th>
+            <th>Zarezervovat</th>
         </tr>
-    {/foreach}
-</table>
+        {foreach $borrows as $borrow}
+            <tr>
+                <td><a href="{link :Library:ViewLibrary: $borrow->ID_knihovna}">{$borrow->ID_knihovna}</a></td>
+                <td>{$borrow->mnozstvi-$borrow->vydano}</td>
+                <td>{if $userID}<a href="{link zapujcit! $kniha->ID, $borrow->ID_knihovna,$userID}">Zarezervovat</a>{else}<a href="{link redirectToLogin!}">Zarezervovat</a>{/if}</td>
+            </tr>
+        {/foreach}
+    </table>
+</div>
 {/block}
