--- a/app/BookTransactionModule/Presenters/templates/LibBookManualAdd.default.latte
+++ b/app/BookTransactionModule/Presenters/templates/LibBookManualAdd.default.latte
@@ -1,5 +1,12 @@
 {block content}
-    <a n:href="LibBooks:  $libName">Zpět</a>
+<div id="lib-books-manual-add">
+    <div id="lib-books-manual-add-back">
+        <a n:href="LibBooks:  $libName">Zpět</a>
+    </div>
     <h1>Přidat titul do knihovny {$libName}</h1>
-    {control bookAddForm }
+    <div class="medzera"></div>
+    <div id="lib-books-manual-add-formular">
+        {control bookAddForm }
+    </div>
+</div>
 {/block}
