--- a/app/BorrowingModule/Presenters/templates/Borrow.default.latte
+++ b/app/BorrowingModule/Presenters/templates/Borrow.default.latte
@@ -1,24 +1,25 @@
 {block content}
-{if $user->isAllowed('UserBorrow')}<a n:href="UserBorrows: ">Zpět na výpůjčky</a>{/if}
-{if $user->isAllowed('KnihovnikBorrow')}<a n:href="KnihovnikBorrows: $vypujcka->ID_knihovna">Zpět do správy rezervací</a>{/if}
-	<h1>Výpůjčka id: {$vypujcka->ID}</h1>
-	<p>Titul: <a href="{link :Book:Kniha:show $vypujcka->ID_titul}">{$vypujcka->ID_titul}</a></p>
-	<p>Stav: {$vypujcka->stav}</p>
-	<p>Knihovna: <a href="{link :Library:ViewLibrary: $vypujcka->ID_knihovna}">{$vypujcka->ID_knihovna}</a></p>
-	<p>Datum vystavení: {$vypujcka->datum_vytvoreno}</p>
-	<p>Datum vydani: {$vypujcka->datum_vydano}</p>
-	<p>Datum vrácení: {$vypujcka->datum_vraceno}</p>
+<div id="borrow">
+	{if $user->isAllowed('UserBorrow')}<a n:href="UserBorrows: ">Zpět na výpůjčky</a>{/if}
+	{if $user->isAllowed('KnihovnikBorrow')}<div id="borrow-back"><a n:href="KnihovnikBorrows: $vypujcka->ID_knihovna">Zpět do správy rezervací</a></div>{/if}
+		<h1>Výpůjčka id: {$vypujcka->ID}</h1>
+		<p>Titul: <a href="{link :Book:Kniha:show $vypujcka->ID_titul}">{$vypujcka->ID_titul}</a></p>
+		<p>Stav: {$vypujcka->stav}</p>
+		<p>Knihovna: <a href="{link :Library:ViewLibrary: $vypujcka->ID_knihovna}">{$vypujcka->ID_knihovna}</a></p>
+		<p>Datum vystavení: {$vypujcka->datum_vytvoreno}</p>
+		<p>Datum vydani: {$vypujcka->datum_vydano}</p>
+		<p>Datum vrácení: {$vypujcka->datum_vraceno}</p>
 
-	<p>Počet prodloužení: {$vypujcka->prodlouzeni}</p>
-	
-{if $vypujcka->datum_vydano }<p>nutno vrátit do:{$vypujcka->datum_vydano->modifyClone('+'.(($vypujcka->prodlouzeni+1)*14).' day')}</p>{/if}
-{if isset($pocetDni) }<p>{if $nevracenoVterminu}Neodevzdáno v termínu, den:{else}Počet dní do vrácení{/if}:{$pocetDni}</p>{/if}
-{if $user->isAllowed('UserBorrow')&&$vypujcka->stav=='vydáno'}{if $vypujcka->prodlouzeni<2}<a n:href="prodlouzit! ">Prodloužit</a>{/if}{/if}
-{if isset($pokuta) }<p>Potenciální pokuta:{$pokuta} </p>{/if}
-{if $user->isAllowed('KnihovnikBorrow')&&$vypujcka->stav=='rezervováno'}<a n:href="vydat! $vypujcka->ID">Vydat</a>{/if}
-{if $user->isAllowed('KnihovnikBorrow')&&$vypujcka->stav=='vydáno'}<a n:href="vratit! $vypujcka->ID">Vrátit</a>{/if}
-{if $user->isAllowed('KnihovnikBorrow')&&$vypujcka->stav=='vydáno'}<a n:href="vratitVyradit! $vypujcka->ID">Vrátit a vyřadit knihu</a>{/if}
-{if $user->isAllowed('KnihovnikBorrow')&&($vypujcka->stav=='rezervováno'||$vypujcka->stav=='ve frontě')}<a n:href="zamitnout! $vypujcka->ID">Zamítnout</a>{/if}
-{if $user->isAllowed('UserBorrow')&&($vypujcka->stav=='rezervováno'||$vypujcka->stav=='ve frontě')}<a n:href="smazat! ">Zrušit</a>{/if}	
-
+		<p>Počet prodloužení: {$vypujcka->prodlouzeni}</p>
+		
+	{if $vypujcka->datum_vydano }<p>nutno vrátit do:{$vypujcka->datum_vydano->modifyClone('+'.(($vypujcka->prodlouzeni+1)*14).' day')}</p>{/if}
+	{if isset($pocetDni) }<p>{if $nevracenoVterminu}Neodevzdáno v termínu, den:{else}Počet dní do vrácení{/if}:{$pocetDni}</p>{/if}
+	{if $user->isAllowed('UserBorrow')&&$vypujcka->stav=='vydáno'}{if $vypujcka->prodlouzeni<2}<a n:href="prodlouzit! ">Prodloužit</a>{/if}{/if}
+	{if isset($pokuta) }<p>Potenciální pokuta:{$pokuta} </p>{/if}
+	{if $user->isAllowed('KnihovnikBorrow')&&$vypujcka->stav=='rezervováno'}<a n:href="vydat! $vypujcka->ID">Vydat</a>{/if}
+	{if $user->isAllowed('KnihovnikBorrow')&&$vypujcka->stav=='vydáno'}<a n:href="vratit! $vypujcka->ID">Vrátit</a>{/if}
+	{if $user->isAllowed('KnihovnikBorrow')&&$vypujcka->stav=='vydáno'}<a n:href="vratitVyradit! $vypujcka->ID">Vrátit a vyřadit knihu</a>{/if}
+	{if $user->isAllowed('KnihovnikBorrow')&&($vypujcka->stav=='rezervováno'||$vypujcka->stav=='ve frontě')}<a n:href="zamitnout! $vypujcka->ID">Zamítnout</a>{/if}
+	{if $user->isAllowed('UserBorrow')&&($vypujcka->stav=='rezervováno'||$vypujcka->stav=='ve frontě')}<a n:href="smazat! ">Zrušit</a>{/if}	
+</div>
 {/block}
