--- a/app/BorrowingModule/Presenters/templates/UserBorrows.default.latte
+++ b/app/BorrowingModule/Presenters/templates/UserBorrows.default.latte
@@ -1,6 +1,6 @@
 {block content}
+<div id="user-borrows">
 	<h1>Moje výpůjčky</h1>
-
 	<table>
 	<tr>
 		<th>Titul</th>
@@ -22,5 +22,5 @@
 		</tr>
 	{/foreach}
 	</table>
-
+</div>
 {/block}
