--- a/app/CoreModule/Presenters/templates/Homepage/default.latte
+++ b/app/CoreModule/Presenters/templates/Homepage/default.latte
@@ -1,4 +1,6 @@
 {block content}
-	<h1>Vítejte v knihovně.</h1>
-	<h2><a n:href=":Library:ViewLibraries:">Naše knihovny</a></h2>
+<div id="kontent">
+	<h1>Vítejte v knihovně</h1>
+	<div id="btn"><a n:href=":Library:ViewLibraries:">Naše knihovny</a></div>
+</div>
 {/block}
