--- a/app/CoreModule/Presenters/templates/Layout/Navigation.latte
+++ b/app/CoreModule/Presenters/templates/Layout/Navigation.latte
@@ -2,12 +2,12 @@
 <div id="navigace">
 <nav>
     <ul>
-        <li><a n:href=":Core:Homepage:">Domovská stránka</a></li>
+        <li><a n:href=":Library:ViewLibraries:default">Domovská stránka</a></li>
         {if !$user->isAllowed('Knihy')}<li><a n:href=":Book:Vyhledani: null">Knihy</a></li>{/if}
         {if $user->isAllowed('Knihy')}<li><a n:href=":Book:Vyhledani: null">Knihy/Správa knih</a></li>{/if}
 
         {if $user->isAllowed('Knihovna')}<li><a n:href=":Library:LibraryDashBoard:">Spravované knihovny</a></li>{/if}
-        {if $user->isAllowed('OrdersDView')}<li><a n:href=":Order:OrderDView:">Objednávky ke spracování</a></li>{/if}
+        {if $user->isAllowed('OrdersDView')}<li><a n:href=":Order:OrderDView:">Objednávky</a></li>{/if}
         {if $user->isAllowed('AdminPage')}<li><a n:href=":Admin:UsersAdmin:">Správa uživatelů</a></li>{/if}
 
         {if $user->isAllowed('UserBorrow')}<li><a n:href=":Borrowing:UserBorrows:">Mé výpůjčky</a></li>{/if}
