--- a/app/LibraryModule/Presenters/templates/Library.default.latte
+++ b/app/LibraryModule/Presenters/templates/Library.default.latte
@@ -1,5 +1,6 @@
 {block content}
-	<a href="{link LibraryDashBoard: }">Zpět</a>
+<div id="library">
+	<div id="library-back"><a href="{link LibraryDashBoard: }">Zpět</a></div>
 	<h1>Správa knihovny: {$knihovna->ID}</h1>
 	<ul>
 		<li><a href="{link :Borrowing:KnihovnikBorrows: $knihovna->ID}">Správa rezervací</a></li>
@@ -10,4 +11,5 @@
 		<li><a href="{link LibraryEdit: $knihovna->ID}">Editace knihovny</a></li>	
 		{if $user->isAllowed('AdminPage')}<li><a n:href=":Library:LibraryAddKnihovnik: $knihovna->ID">Editace knihovníků</a></li>{/if}	
 	</ol>
+</div>
 {/block}
