--- a/app/LibraryModule/Presenters/templates/LibraryAdd.default.latte
+++ b/app/LibraryModule/Presenters/templates/LibraryAdd.default.latte
@@ -1,6 +1,11 @@
 {block content}
-	<a n:href=":Library:LibraryDashBoard: ">zpet</a>
+<div id="library-add">
+	<div id="library-add-back">
+		<a n:href=":Library:LibraryDashBoard: ">zpet</a>
+	</div>
 	<h1>Přidat knihovnu</h1>
-	{control libraryAddForm }
-
+	<div id="library-add-formular">
+		{control libraryAddForm }
+	</div>
+</div>
 {/block}
