--- a/app/LibraryModule/Presenters/templates/LibraryDashBoard.default.latte
+++ b/app/LibraryModule/Presenters/templates/LibraryDashBoard.default.latte
@@ -1,4 +1,5 @@
 {block content}
+<div id="library-dashboard">
 	{if $user->isAllowed('AdminPage')}<li><a n:href=":Library:LibraryAdd:">Přidat knihovnu</a></li>{/if}
 	<h1>Správa knihoven</h1>
 	{if $knihovny}
@@ -10,5 +11,5 @@
 		{/foreach}
 		</ol>
 	{/if}
-
+</div>
 {/block}
