--- a/app/LibraryModule/Presenters/templates/ViewLibrary.default.latte
+++ b/app/LibraryModule/Presenters/templates/ViewLibrary.default.latte
@@ -1,9 +1,13 @@
 {block content}
+<div id="library-view">
 	<a n:href=":Library:ViewLibraries:">Zpět</a>
 	<h1>Knihovna: {$knihovna->ID}</h1>
 	<p>{$knihovna->popis}</p>
+	<div class="medzera"></div>
 	<h2>Otevírací doba</h2>
 	<p>{$knihovna->oteviraci_doba}</p>
+	<div class="medzera"></div>
 	<h2>Adresa</h2>
 	<p>{$knihovna->adresa}</p>
+</div>
 {/block}
