--- a/app/LoginModule/Presenters/templates/SignIn.default.latte
+++ b/app/LoginModule/Presenters/templates/SignIn.default.latte
@@ -1,5 +1,9 @@
 {block content}
-<h1>Příhlásit se</h1>
-{control signInForm}
-<a href="{link :Login:SignUp:}">Založit účet</a>
+<div id="login">
+    <h1>Příhlásit se</h1>
+    <div id="login-formular">
+        {control signInForm}
+    </div>
+    <a href="{link :Login:SignUp:}">Založit účet</a>
+</div>
 {/block content}
