--- a/app/LoginModule/Presenters/templates/SignUp.default.latte
+++ b/app/LoginModule/Presenters/templates/SignUp.default.latte
@@ -1,4 +1,8 @@
 {block content}
-<h1>Zaregistrovat se</h1>
-{control signUpForm}
+<div id="registracia">
+    <h1>Zaregistrovat se</h1>
+    <div id="registracia-formular">
+        {control signUpForm}
+    </div>
+</div>
 {/block content}
