--- a/app/OrderModule/Presenters/templates/OrderDView.default.latte
+++ b/app/OrderModule/Presenters/templates/OrderDView.default.latte
@@ -1,20 +1,22 @@
 {block content}
-<h2>Objednávky ke zpracování</h2>
-<table>
-<tr>
-    <th>ID</th>
-    <th>Stav</th>
-    <th>Datum přijmutí</th>
-    <th>Podrobnosti</th>
-</tr>
-    {foreach $orders as $order}
+<div id="ordersd">
+    <h1>Objednávky ke zpracování</h1>
+    <div class="medzera"></div>
+    <table id="ordersd-table">
     <tr>
-        <td>{$order->ID}</td>
-        <td>{$order->stav}</td>
-        <td>{$order->datum_podani}</td>
-         <td><a n:href="Order: $order->ID">Podrobnosti</a></td>
+        <th>ID</th>
+        <th>Stav</th>
+        <th>Datum přijmutí</th>
+        <th>Podrobnosti</th>
     </tr>
-    {/foreach}
-</table>
-
+        {foreach $orders as $order}
+        <tr>
+            <td>{$order->ID}</td>
+            <td>{$order->stav}</td>
+            <td>{$order->datum_podani}</td>
+            <td><a n:href="Order: $order->ID">Podrobnosti</a></td>
+        </tr>
+        {/foreach}
+    </table>
+</div>
 {/block content}
