--- a/app/OrderModule/Presenters/templates/Orders.default.latte
+++ b/app/OrderModule/Presenters/templates/Orders.default.latte
@@ -1,27 +1,29 @@
 {block content}
-<a n:href=":Library:Library:  $libraryName">Zpět</a>
-<h2>Objednávky</h2>
-{if $user->isAllowed('Orders')}<a n:href="NewOrder! $libraryName">Vytvořit objednávku</a>{/if}
-
-
-<table>
-<tr>
-    <th>ID</th>
-    <th>Stav</th>
-    <th>Datum založení</th>
-    <th>Náhled</th>
-</tr>
-    {foreach $orders as $order}
+<div id="orders">
+    <div id="orders-back">
+        <a n:href=":Library:Library:  $libraryName">Zpět</a>
+    </div>
+    <h1>Objednávky</h1>
+    {if $user->isAllowed('Orders')}<a n:href="NewOrder! $libraryName">Vytvořit objednávku</a>{/if}
+    <div class="medzera"></div>
+    <table id="orders-table">
     <tr>
-        <td>{$order->ID} </td>
-        <td>{$order->stav}</td>
-        <td>{$order->datum_zalozenia}</td>
-        <td>
-            {if $order->stav=="vytvořena"}<a n:href="OrderEdit: $order->ID">Editovat</a>
-            {else}<a n:href="Order: $order->ID">Zobrazit</a>{/if}        
-        </td>
+        <th>ID</th>
+        <th>Stav</th>
+        <th>Datum založení</th>
+        <th>Náhled</th>
     </tr>
-    {/foreach}
-</table>
-
+        {foreach $orders as $order}
+        <tr>
+            <td>{$order->ID} </td>
+            <td>{$order->stav}</td>
+            <td>{$order->datum_zalozenia}</td>
+            <td>
+                {if $order->stav=="vytvořena"}<a n:href="OrderEdit: $order->ID">Editovat</a>
+                {else}<a n:href="Order: $order->ID">Zobrazit</a>{/if}        
+            </td>
+        </tr>
+        {/foreach}
+    </table>
+</div>
 {/block content}
