--- a/app/UserModule/Presenters/templates/UserEdit.default.latte
+++ b/app/UserModule/Presenters/templates/UserEdit.default.latte
@@ -1,4 +1,8 @@
 {block content}
-<h2>Editace profilu</h2>
-{control editProfileForm}
+<div id="user-edit">
+<h1>Editace profilu</h1>
+<div id="user-edit-formular">
+    {control editProfileForm}
+</div>
+</div>
 {/block content}
