--- a/app/CoreModule/Presenters/templates/@layout.latte
+++ b/app/CoreModule/Presenters/templates/@layout.latte
@@ -3,16 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-
+	<link rel="stylesheet" href="{$basePath}/style.css">
 	<title>Knihovna</title>
 </head>
 
 <body>
-	{include Navigation from 'Layout/Navigation.latte'}
-	{include content}
-	<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
+	<div class="allContentent" n:snippet="all">
+		{include Navigation from 'Layout/Navigation.latte'}
+		{include content}
+		<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
+	</div>
 	{block scripts}
 	<script src="https://nette.github.io/resources/js/3/netteForms.min.js"></script>
 	{/block}
+	<script src="{$basePath}/js/Naja.js" type="module"></script>
+	<script src="{$basePath}/js/main.js"></script>
 </body>
 </html>
