--- a/app/CoreModule/Presenters/templates/@layout.latte
+++ b/app/CoreModule/Presenters/templates/@layout.latte
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="{$basePath}/style.css">
+	<link rel = "icon" href = "{$basePath}/img/favicon.png" type = "image/x-icon">
 	<title>Knihovna</title>
 </head>
 
